# claude-chat

./: .gitignore  CLAUDE.md  agent_runs.py  api.py  core_utils.py  pyproject.toml  run_agent_background.py
configs/: __init__.py  app_config.py
configs/deploy/: __init__.py
configs/middleware/: __init__.py
configs/middleware/cache/: redis_config.py
core/: agent_loader.py  error_processor.py  response_processor.py  run.py  runtime_cache.py  thread_manager.py  tool.py
core/mcp/: mcp_manager.py  mcp_service.py
core/prompts/: prompt.py
core/services/: db.py  llm.py  redis.py  wrappers.py
core/utils/: auth_utils.py  default_agent_service.py  icon_generator.py  init_agent.py  json_helpers.py  project_helpers.py  run_management.py  user_locale.py
models/: agent.py  agent_run.py  message.py  project.py  thread.py  types.py  user_role.py
schemas/: agents.py  threads.py
tests/: test_agent_run.py  test_db.py  test_env.py  test_icon_generate.py  test_log.py  test_project_name.py  test_response_processor.py  test_retry.py  test_sdk.py  test_thread.py  test_thread_fields.py  test_uuid.py
