[project]
name = "claude-chat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.10",
    "dramatiq[redis]==1.18.0",
    "fastapi>=0.121.2",
    "loguru>=0.7.3",
    "peewee==3.18.1",
    "peewee-migrate==1.12.2",
    "psycopg2-binary~=2.9.6",
    "pydantic~=2.11.4",
    "pydantic-extra-types~=2.10.3",
    "pydantic-settings~=2.11.0",
    "redis==5.2.1",
    "sqlalchemy>=2.0.44",
    "structlog==25.4.0",
    "tenacity>=9.1.2",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.38.0",
]

[tool.setuptools]
packages = []

[tool.uv]
default-groups = []
package = false

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

project-excludes = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".claude",
    ".history",
    ".vscode",
    "debug_streams",
]

strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.5",
    "types-psycopg2~=2.9.21",
]
